--- a/TravelApp/app/src/main/AndroidManifest.xml
+++ b/TravelApp/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TravelApp">
+
         <activity
             android:name=".activities.DetailWisataActivity"
             android:exported="false" />
@@ -35,7 +36,7 @@
             android:name=".activities.HotelActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,6 +44,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activities.MainActivity"
+            android:exported="true"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
